<resources>
    <string name="app_name" translatable="false">PictoBlox</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="device_discovery_permission_info">"Location permission is required to search nearby Bluetooth devices.     "</string>
    <string name="analytics_connect_device_list" translatable="false">connect_device_list</string>
    <string name="bt_init_failed_msg" translatable="false">Failed to detect Bluetooth. Please check your settings.</string>
    <string name="okay">Okay</string>
    <string name="enabling_bluetooth">Enabling Bluetooth</string>
    <string name="select_device">Select Device</string>
    <string name="device_discovery_type_recently_connected">Recently connected</string>
    <string name="device_discovery_type_nearby_devices">Nearby devices</string>
    <string name="search_canceled">Search cancelled</string>
    <string name="analytics_connect_open" translatable="false">connect_open_device_listing</string>
    <string name="analytics_connect_attempt" translatable="false">connect_attempt</string>
    <string name="analytics_connect_success" translatable="false">connect_success</string>
    <string name="analytics_connect_device_type" translatable="false">device_type</string>
    <string name="analytics_connect_fail_reason" translatable="false">fail_reason</string>
    <string name="analytics_connect_fail" translatable="false">connect_fail</string>
    <string name="analytics_connect_unsupported_device" translatable="false">connect_unsupported_device</string>
    <string name="analytics_connect_stack" translatable="false">connect_stack</string>
    <string name="analytics_connect_stack_level" translatable="false">level</string>
    <string name="analytics_auto_connect_session" translatable="false">auto_connect_session</string>
    <string name="analytics_auto_connect_event_flag" translatable="false">auto_connect_flag_change</string>
    <string name="analytics_auto_connect_event_flag_value" translatable="false">value</string>
    <string name="analytics_auto_connect_event_flag_changed_from" translatable="false">changed_from</string>
    <string name="analytics_auto_connect_event_flag_changed_from_dialog" translatable="false">dialog</string>
    <string name="analytics_auto_connect_event_flag_changed_from_settings" translatable="false">settings</string>
    <string name="analytics_success_after" translatable="false">success_after</string>
    <string name="dabble_connected" translatable="false">Connected</string>
    <string name="function_notification_channel_id" translatable="false">PictoBlox Connectivity Indication</string>
    <string name="disconnect_prompt_message" translatable="false">Disconnect Bluetooth device?</string>
    <string name="cancel">Cancel</string>
    <string name="go_back" translatable="false">Go Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto_connect_step1" translatable="false">Would you like Dabble to auto-connect with</string>
    <string name="auto_connect_step2" translatable="false">in case of disconnection? You can change the setting anytime.</string>
    <string name="preference_updated">Preference updated</string>
    <string name="connecting_device" translatable="false">Connecting %1$s</string>
    <string name="connected_device" translatable="false">Connected %1$s</string>
    <string name="disconnected_device" translatable="false">Disconnected %1$s</string>
    <string name="error_device" translatable="false">Error %1$s</string>
    <string name="project_list_no_recent_item">No recently edited files</string>
    <string name="project_list_no_item">You have not saved any files yet!</string>
    <string name="project_list_no_items_on_cloud" translatable="false">You have not saved any files on cloud yet!</string>
    <string name="gen_delete" translatable="false">DELETE</string>
    <string name="gen_share" translatable="false">SHARE</string>
    <string name="selct_board" translatable="false">Select Board</string>
    <string name="save_project_unique_error">Project with this name already exists!</string>
    <string name="type_project_name">Type project name</string>
    <string name="empty_project_error">Project name cannot be empty</string>
    <string name="save_project_title">Save current Project</string>
    <string name="save">Save</string>
    <string name="override" translatable="false">OVERRIDE</string>
    <string name="new_project_warning" translatable="false">Opening new project will delete any unsaved changes. Continue?</string>
    <string name="menu_open" translatable="false">Open saved projects</string>
    <string name="menu_open_file_from_storage" translatable="false">Open file from storage</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="menu_tutorials" translatable="false">Tutorials</string>
    <string name="menu_rate_us" translatable="false">Rate us</string>
    <string name="menu_about_PictoBlox" translatable="false">About PictoBlox</string>
    <string name="menu_save" translatable="false">Save</string>
    <string name="menu_board_sselected" translatable="false">Board selected</string>
    <string name="menu_connect" translatable="false">Connect</string>
    <string name="menu_help" translatable="false">Help</string>
    <string name="loading_screen_help_1" translatable="false">Did you know that PictoBlox is also available for PC?</string>
    <string name="loading_screen_help_2" translatable="false">How to clone a Sprite?</string>
    <string name="loading_screen_help_3" translatable="false">How to ask for inputs from user?</string>
    <string name="loading_screen_help_4" translatable="false">How to make a Sprite jump?</string>
    <string name="loading_screen_help_5" translatable="false">How to record a sound?</string>
    <string name="loading_screen_help_6" translatable="false">How to make a sprite move smoothly?</string>
    <string name="loading_screen_help_7" translatable="false">How to customize the Backdrop?</string>
    <string name="loading_screen_help_8" translatable="false">How to Animate a Sprite?</string>
    <string name="loading_screen_help_9" translatable="false">Did you know PictoBlox have may extensions? \nUse extension for Actuators,
        Lighting, evive, Dabble, Sensors, Display and many more
    </string>
    <string name="loading_screen_help_10" translatable="false">How to open stage?</string>
    <string name="loading_screen_help_11" translatable="false">Follow us on Instagram at thestempedia</string>
    <string name="project_list_recent" translatable="false">Recent</string>
    <string name="project_list_local" translatable="false">Local</string>
    <string name="project_list_cloud" translatable="false">Cloud</string>
    <string name="project_list_hint_search" translatable="false">Search</string>
    <string name="wv_cached_open_snack">Opened cached project %1$s</string>
    <string name="project_list_loading_recent_project">Loading projects saved within 3 days</string>
    <string name="project_list_error_in_listing">Error while fetching list.</string>
    <string name="empty_message"> </string>
    <string name="project_list_loading_all_project">Loading all saved projects</string>
    <string name="project_list_no_local_project">You have not saved any projects yet! Start making already :)</string>
    <string name="project_list_no_recent_project">You have not saved any project in last 3 days.</string>
    <string name="my_space">My Space</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="argument_dialog_hint" translatable="false">Enter Sprite\'s %1$s</string>
    <string name="argument_dialog_enter_decimal">Enter decimal input here…</string>
    <string name="argument_dialog_enter_text">Enter text input here…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="save_current_project">Save Current Project</string>
    <string name="exit">Exit</string>
    <string name="username">Username</string>
    <string name="credits">Credits</string>
    <string name="lets_reset_password">Let\'s reset your password</string>
    <string name="or">Or</string>
    <string name="email_guardian_email">Email/Guardian\'s Email</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="about_body1">PictoBlox is a Coding and AI education platform with graphical programming and Python interfaces that provides a fulfilling AI and coding learning experience through its project-based approach. Students can create games and animations, make interactive real-world applications-based AI and IoT projects, program robots, and much more. PictoBlox also helps them develop must-have 21st-century skills such as creativity, logical reasoning, and problem-solving.  PictoBlox has been developed by STEMpedia, a globally renowned EdTech startup committed to providing a one-stop solution for STEM education to enthusiastic students and educators. STEMpedia strives towards transforming young minds into innovators of tomorrow!</string>
    <string name="about_us">About us</string>
    <string name="terms_conditions">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="explore_more_about">Exmplore more about</string>
    <string name="body_2">STEMpedia, PictoBlox, Dabble, Quarky, and evive are either registered trademarks or trademarks of Agilo Research Pvt. Ltd. in India and/or other countries. \n</string>
    <string name="pictoblox_version">PictoBlox version:</string>
    <string name="body_3">Privacy Policy of PictoBlox and STEMpedia are located</string>
    <string name="body_4">"If you have any queries regarding this policy, or any other matter, you can contact us "</string>
    <string name="copyright">Copyright © 2019-2023, Agilo Research Pvt. Ltd. All rights reserved.</string>
    <string name="body_5">Scratch is developed and maintained by the Scratch Team at the Lifelong Kindergarten group at MIT Media Lab. This application is not associated with or endorsed by the Scratch Team, Scratch Project, the Lifelong Kindergarten group or MIT Media Lab. \nThe Scratch name, Scratch Logo, and Scratch Cat are trademarks owned by the Scratch Team. The MIT name and logo are trademarks owned by the Massachusetts Institute of Technology.</string>
    <string name="terms_body">The software is provided “as-is” and without warranty of any kind, express, implied or otherwise, including without limitation, any warranty of merchantability or fitness for a particular purpose. In no event shall the copyright holder or contributors be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including, but not limited to, procurement of substitute goods or services; loss of use, data, or profits; or business interruption) however caused and on any theory of liability, whether in contract, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this software, even if advised of the possibility of such damage.</string>
    <string name="privacy_body">We may update our Terms and Privacy Policy from time to time and you are advised to check this page from time to time for any changes. Any changes are effective immediately.</string>
</resources>