<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="io.stempedia.pictoblox.web.SaveProjectViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimarySemiTransparent"
        android:onClick="@{()->data.onExternalPlaneClicked()}">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_login_background"
            android:onClick="@{()->data.onIgnoreClick()}"
            android:paddingStart="48dp"
            android:paddingTop="16dp"
            android:paddingEnd="48dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495">

            <EditText
                android:id="@+id/et_project_name"
                style="@style/style_et_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:afterTextChanged="@{(s) -> data.afterTextChanged(s)}"
                android:ems="14"
                android:hint="@string/type_project_name"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textPersonName"
                android:text="@={data.projectName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView67" />

            <TextView
                android:id="@+id/tv_save_project_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@{data.errorMsg}"
                android:textColor="#A56C6C"
                android:textSize="12sp"
                android:visibility="@{data.showError ? View.VISIBLE:View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/et_project_name"
                app:layout_constraintTop_toBottomOf="@+id/et_project_name"
                tools:text="@string/save_project_unique_error"
                tools:visibility="visible" />


            <ProgressBar
                android:id="@+id/progressBar16"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{data.isSavingInProgress? View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                style="@style/style_tv_login_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:onClick="@{()->data.onSaveClicked()}"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@{data.actionButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_save_project_error"
                tools:text="@string/save" />

            <TextView
                android:id="@+id/textView67"
                style="@style/style_tv_login_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_current_project"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/exit"
                android:onClick="@{()->data.onExitClicked()}"
                android:textColor="@android:color/black"
                android:visibility="@{data.showExit ? View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>